codeforces/998/temp/a.out
a.cc: In function ‘void solve()’:
a.cc:74:14: error: expected ‘;’ before ‘}’ token
   74 |   dbgln("hi")
      |              ^
      |              ;
   75 | }
      | ~             

[code]: 1